fix: attempting fix to disappearing hamburger on scroll when tree expanded on mobile - fix: z-index added on hamburger elements

--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ body {
 /*nav*/
 /*nav-desktop*/
 nav {
-  z-index: 10;
+  z-index: 29;
   align-self: end;
   margin-right: 5%;
   position: fixed;
@@ -91,16 +91,18 @@ nav {
   }
   @media screen and (max-width: 850px){
     
-  nav{width: 40px; height: 40px; margin:0; padding: 0; top: 3px; right: 3px;}
+  nav{z-index: 30; width: 40px; height: 40px; margin:0; padding: 0; top: 3px; right: 3px;}
 
-  .hamburger-icon {width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center;}
+  .hamburger-icon {z-index: 32; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center;}
       .hamburger-icon-piece {
+        z-index: 32;
         width: 25px;
         height: 5%;
         background-color: white;
         border-radius: 1rem;
       }
   nav button{
+    z-index: 33;
     display: block;
     visibility: visible;
     position: absolute;
@@ -120,6 +122,7 @@ nav {
     transition: translate 0.3s ease-in-out; 
   }
     #topnav {
+      z-index: 36;
       width: 100%;
       height: 100%;
       background-color: #12171df3;
